[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "FEnto"
version = "0.0.1"
authors = [{name = "Uxía Sendón Caamaño", email = "uxiasendon@gmail.com"}]
description = "Paquete que permite resolver ecuaciones en derivadas parciales unidimensionales y bidimensionales usando el método de elementos finitos."
readme = "README.md"
requires-python = ">=3.7.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "matplotlib"]
license = { text = "MIT" }
keywords = ["elementos finitos", "FEM", "MEF", "ecuaciones diferenciales", "EDs", "EDPs"]

[project.urls]
Homepage = "https://github.com/usendon/FEnto"
DOWNLOAD = "https://github.com/usendon/FEnto.git"
